--- a/loginregitsration.html
+++ b/loginregitsration.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="register">
-      <h4>Log-In</h4>
+      <h4>Create A Free Account</h4>
       <p>or</p>
       <form>
         <div class="form-group">
